--- a/style.css
+++ b/style.css
@@ -56,3 +56,96 @@
     font-weight: 700;
     color: #091E42;
 }
+
+.list-group-item {
+    border: none;
+}
+
+.btn-primary{
+    border: 2px solid;
+}
+.disp {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 40px ;
+}
+
+.script {
+    display: flex;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.java {
+    padding-left: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+img {
+    border-radius: 50%;
+}
+
+.lang-2 {
+    padding-left: 10px;
+}
+
+.mb-3 {
+    width: 70%;
+}
+
+.form-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-control {
+    border: 2px solid;
+}
+
+.about-me p{
+    width: 90%;
+    padding: 20px 20px ;
+    text-align: center;
+}
+
+.about-me h1 {
+    padding-top: 50px;
+    font-weight: 700;
+}
+
+.form-section {
+    background-image: url('1.png');
+    background-repeat: no-repeat;
+    background-color:#6070FF;
+    background-size: contain;
+    background-position-x: 100%;
+    color: #fff;
+    height: 100vh;
+}
+
+.bg-secondary {
+    background-color: #f9f6f6!important;
+}
+
+@media (min-width: 576px){
+    .desktop {
+        display: flex;
+        justify-content: space-between;  
+    }
+
+    .text {
+        width: 30%;
+    }
+
+    .language {
+        width: 80%;
+    }
+
+    .list-group-item {
+        padding: 10px;
+    }
+
+}
