--- a/style.css
+++ b/style.css
@@ -7,11 +7,15 @@
     background-image: url(Assets/img/header.jpg);
 }
 
+.container {
+    width: 500px;
+    margin-left: 0;
+}
 .img-fluid {
     padding: 25px;
     resize: both;
     height: 400px;
-    width: 800px;
+    width: 500px;
 }
 
 .card {
@@ -55,4 +59,26 @@
     font-size: 40px;
     font-weight: 700;
     color: #091E42;
+}
+
+.icons {
+    list-style: none;
+    display: flex;
+}
+
+.fa-twitter,
+.fa-linkedin,
+.fa-github,
+.fa-hand-peace,
+.fa-m  {
+    padding: 10px;
+}
+
+.heading {
+    margin-left: 65px;
+    margin-top: 25px;
+}
+
+.connect {
+   color: #1c5ac4;
 }
